# glTF

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  COPYING.adoc  DracoBitstream.md  LICENSE.adoc  LICENSE.md  README.md  ReadmeArtists.md  ReadmeDevelopers.md  ReadmeTools.md  annotated_examples.md  for test 1  package.json
.github/: COWORKERS
.reuse/: dep5
COLLADA2GLTF/: CMakeLists.txt  COLLADA2GLTFWriter.cpp  COLLADA2GLTFWriter.h  GLTFOpenCOLLADAUtils.h  GitSHA1.cpp.in  main.cpp
COLLADA2GLTF/dependencies/o3dgc/src/test/: CMakeLists.txt
converter/COLLADA2GLTF/: CMakeLists.txt  COLLADA2GLTFExport.h  COLLADA2GLTFWriter.cpp  COLLADA2GLTFWriter.h  DAE2GLTFWriter.cpp  DAE2GLTFWriter.h  DAE2JSONWriter.cpp  GLTF-OpenCOLLADA.h  GLTFConverterContext.cpp  GLTFConverterContext.h  GLTFOpenCOLLADA.h  GLTFOpenCOLLADAUtils.cpp  GLTFOpenCOLLADAUtils.h  GitSHA1.h  KMZ2Collada.cpp  KMZ2Collada.h  config.json  main.cpp
converter/COLLADA2GLTF/GLTF/: GLTF.h  GLTFAccessor.cpp  GLTFAccessor.h  GLTFAccessorCache.cpp  GLTFAccessorCache.h  GLTFAnimation.cpp  GLTFAnimation.h  GLTFAsset.cpp  GLTFAsset.h  GLTFBuffer.cpp  GLTFBuffer.h  GLTFCleanupEvaluator.cpp  GLTFConfig.cpp  GLTFConfig.h  GLTFEffect.cpp  GLTFEffect.h  GLTFExtraDataHandler.cpp  GLTFExtraDataHandler.h  GLTFExtras.cpp  GLTFExtras.h  GLTFIndices.cpp  GLTFIndices.h  GLTFInputStream.cpp  GLTFInputStream.h  GLTFMesh.cpp  GLTFMesh.h  GLTFMeshAttribute.cpp  GLTFMeshAttribute.h  GLTFOutputStream.cpp  GLTFOutputStream.h  GLTFPrimitive.cpp  GLTFPrimitive.h  GLTFProfile.cpp  GLTFProfile.h  GLTFSkin.cpp  GLTFSkin.h  GLTFTypesAndConstants.h  GLTFUtils.cpp  GLTFUtils.h  GLTFWriter.cpp  (+11 more)
converter/COLLADA2GLTF/JSON/: JSONArray.cpp  JSONArray.h  JSONNumber.cpp  JSONNumber.h  JSONObject.cpp  JSONObject.h  JSONString.cpp  JSONString.h  JSONValue.cpp  JSONValue.h
converter/COLLADA2GLTF/JSONExport/: JSONAccessor.cpp  JSONAccessor.h  JSONArray.cpp  JSONBuffer.cpp  JSONBuffer.h  JSONExport.h  JSONExportTypesAndConstants.h  JSONIndices.cpp  JSONMesh.h  JSONObject.cpp  JSONObject.h  JSONPrimitive.h
converter/COLLADA2GLTF/assetModifiers/: GLTFAssetModifier.h  GLTFFlipUVModifier.cpp  GLTFFlipUVModifier.h
converter/COLLADA2GLTF/convert/: animationConverter.cpp  animationConverter.h  meshConverter.cpp  meshConverter.h
converter/COLLADA2GLTF/dependencies/json/include/rapidjson/: document.h
converter/COLLADA2GLTF/dependencies/kmz/: CMakeLists.txt
converter/COLLADA2GLTF/dependencies/kmz/zlib/: zlib.lib  zlibstat.lib
converter/COLLADA2GLTF/dependencies/misc/: getopt.h  getopt_long.c
converter/COLLADA2GLTF/dependencies/o3dgc/: README.md
converter/COLLADA2GLTF/dependencies/o3dgc/install/: run.py
converter/COLLADA2GLTF/dependencies/o3dgc/scripts/: cmake_common.cmake
converter/COLLADA2GLTF/dependencies/o3dgc/src/: CMakeLists.txt
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/: CMakeLists.txt
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_common_lib/inc/: o3dgcCommon.h  o3dgcDVEncodeParams.h  o3dgcSC3DMCEncodeParams.h
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_decode_lib/: CMakeLists.txt
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_decode_lib/inc/: o3dgcDynamicVectorDecoder.h  o3dgcSC3DMCDecoder.inl
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_decode_lib/src/: o3dgcDynamicVectorDecoder.cpp
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_encode_lib/: CMakeLists.txt
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_encode_lib/inc/: o3dgcSC3DMCEncoder.inl
converter/COLLADA2GLTF/dependencies/o3dgc/src/o3dgc_encode_lib/src/: o3dgcDynamicVectorEncoder.cpp
converter/COLLADA2GLTF/dependencies/o3dgc/src/test/: cmake_install.cmake
converter/COLLADA2GLTF/dependencies/o3dgc/src/test/src/: main.cpp
converter/COLLADA2GLTF/extensions/o3dgc-compression/: GLTF-Open3DGC.cpp  GLTF-Open3DGC.h
converter/COLLADA2GLTF/helpers/: encodingHelpers.cpp  encodingHelpers.h  geometryHelpers.cpp  geometryHelpers.h  mathHelpers.cpp  mathHelpers.h
converter/COLLADA2GLTF/kmz/: KMZ2Collada.cpp  KMZ2Collada.h
converter/COLLADA2GLTF/profiles/webgl-1.0/: GLTFWebGL_1_0_Profile.cpp  GLTFWebGL_1_0_Profile.h
converter/COLLADA2GLTF/shaders/: commonProfileShaders.cpp  commonProfileShaders.h
converter/COLLADA2GLTF/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
converter/COLLADA2GLTF/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
converter/COLLADA2GLTF/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.write.1.tlog
converter/COLLADA2GLTF/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
converter/dae2json/: .gitignore  CMakeLists.txt  DAE2JSONWriter.cpp  DAE2JSONWriter.h  GLTFConverterContext.cpp  GLTFConverterContext.h  dae2json.1  main.cpp
converter/dae2json/JSONExport/: JSONAccessor.cpp  JSONAccessor.h  JSONArray.cpp  JSONArray.h  JSONBuffer.cpp  JSONBuffer.h  JSONEffect.cpp  JSONEffect.h  JSONExport.h  JSONExportTypesAndConstants.h  JSONIndices.cpp  JSONIndices.h  JSONMesh.cpp  JSONMesh.h  JSONNumber.cpp  JSONNumber.h  JSONObject.cpp  JSONObject.h  JSONPrimitive.cpp  JSONPrimitive.h  JSONString.cpp  JSONString.h  JSONUtils.cpp  JSONUtils.h  JSONValue.cpp  JSONValue.h  JSONWriter.cpp  JSONWriter.h
converter/dae2json/dae2json.xcodeproj/: project.pbxproj
converter/dae2json/dae2json.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
converter/dae2json/dae2json.xcodeproj/project.xcworkspace/xcuserdata/cmg473.xcuserdatad/: UserInterfaceState.xcuserstate
converter/dae2json/dae2json.xcodeproj/xcshareddata/xcschemes/: dae2json.xcscheme
converter/dae2json/dae2json.xcodeproj/xcuserdata/cmg473.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
converter/dae2json/dae2json.xcodeproj/xcuserdata/cmg473.xcuserdatad/xcschemes/: dae2json.xcscheme  xcschememanagement.plist
converter/dae2json/helpers/: geometryHelpers.cpp  geometryHelpers.h
converter/dae2json/shaders/: commonProfileShaders.cpp  commonProfileShaders.h
(+1724 files in other folders)
